--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,30 +1,31 @@
 options:
-  logging: CLOUD_LOGGING_ONLY
+  logging: CLOUD_LOGGING_ONLY
 
 steps:
-  # Step 1: Build Docker image
-  - name: 'gcr.io/cloud-builders/docker'
-    args:
-      [
-        'build',
-        '-t',
-        'asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app:${SHORT_SHA}',
-        '.'
-      ]
+  # Step 1: Build Docker image with commit SHA tag
+  - name: 'gcr.io/cloud-builders/docker'
+    args:
+      [
+        'build',
+        '-t',
+        'asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app:$COMMIT_SHA',
+        '.'
+      ]
 
-  # Step 2: Push Docker image to Artifact Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args:
-      [
-        'push',
-        'asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app:${SHORT_SHA}'
-      ]
+  # Step 2: Push Docker image
+  - name: 'gcr.io/cloud-builders/docker'
+    args:
+      [
+        'push',
+        'asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app:$COMMIT_SHA'
+      ]
 
-  # Step 3: Run the deployment script and pass SHORT_SHA as an argument
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    id: 'deploy-and-cleanup'
-    entrypoint: 'bash'
-    args: ['deploy.sh', '${SHORT_SHA}']  # Pass SHORT_SHA as an argument
+  # Step 3: Deploy via script (call bash explicitly)
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: 'bash'
+    args:
+      - './deploy.sh'
+      - "$COMMIT_SHA"   # Pass commit SHA as argument
 
 images:
-  - 'asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app:${SHORT_SHA}'
+  - 'asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app:$COMMIT_SHA'
